@@ -194,7 +194,7 @@ pthread_testcancel (void)
 
 #ifdef __cplusplus
 
-	      throw pthread_exception;
+	      throw Pthread_exception();
 
 #endif /* __cplusplus */
 
